--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.postgresql:postgresql")
+    annotationProcessor("org.projectlombok:lombok")
     compileOnly("org.projectlombok:lombok:1.18.30")
     testImplementation(platform("org.junit:junit-bom"))
     testImplementation("org.junit.jupiter:junit-jupiter")
