--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     compileOnly("org.projectlombok:lombok:1.18.30")
     testImplementation(platform("org.junit:junit-bom"))
     testImplementation("org.junit.jupiter:junit-jupiter")
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation("com.h2database:h2")
 }
 
 tasks.test {
