--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // Jedis
-    implementation 'redis.clients:jedis:3.1.0' // замените на последнюю версию Jedis
+    implementation 'redis.clients:jedis:3.1.0'
+
+    // Spring Boot Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
 
 
