--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,9 @@ dependencies {
 
     // Spring Boot Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
-
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 
 
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.2.0'
