--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation("org.hibernate:hibernate-core:6.2.13.Final")
     implementation('org.jboss.logging:jboss-logging:3.4.2.Final')
     testImplementation('org.mockito:mockito-core:4.0.0')
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
