--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,11 @@ services:
       - POSTGRES_DB=iarylser
     ports:
       - '5432:5432'
-
+  redis:
+    image: redis:alpine3.20
+    restart: always
+    ports:
+      - '6379:6379'
   spring-app:
     build:
       context: .
@@ -21,3 +25,4 @@ services:
       - '8080:8080'
     depends_on:
       - postgres
+      - redis
