--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,13 +3,13 @@ spring:
     type: redis
   data:
     redis:
-      host: localhost
+      host: redis
       port: 6379
   datasource:
     username: iarylser
     password: 1234
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/iarylser
+    url: jdbc:postgresql://postgres:5432/iarylser
   jpa:
     show-sql: true
     hibernate:
