--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '8'
+        distribution: 'temurin'
 
     - name: Build with Gradle
       run: ./gradlew build
@@ -42,7 +43,8 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v2
       with:
-        java-version: '8' 
+        java-version: '8'
+        distribution: 'temurin'
 
     - name: Run tests
       run: ./gradlew test
