--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
       with:
         java-version: '8'
         distribution: 'temurin'
+        
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
 
     - name: Build with Gradle
       run: ./gradlew build
