--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   build:
-    if: ${{ github.event.inputs.build == 'true' }}
+    if: ${{ github.event.inputs.start == 'true' }}
     runs-on: ubuntu-latest
 
     steps:
@@ -36,7 +36,7 @@ jobs:
       run: ./gradlew build -x test
 
   test:
-    if: ${{ github.event.inputs.test == 'true' }}
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
@@ -48,6 +48,9 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+        
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
 
     - name: Run tests
       run: ./gradlew test
