--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id("java")
     id("org.springframework.boot") version "3.1.5"
     id("io.spring.dependency-management") version "1.1.3"
+    id "org.sonarqube" version "4.4.1.3373"
 }
 
 group = "cz.cvut.iarylser"
@@ -10,6 +11,13 @@ version = "1.0-SNAPSHOT"
 repositories {
     mavenCentral()
 }
+
+sonar {
+ properties {
+ property "sonar.projectKey", "Strogolsky_eventExplorerBackend"
+ property "sonar.organization", "strogolsky"
+ property "sonar.host.url", "https://sonarcloud.io"
+ }
 
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
